--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel = "stylesheet" href="styles.css">
 </head>
 <body>
-  <header><h1>Periodic Table</h1></header>
+  <header>
+    <div class="logo"></div>
+    <h1>Mendeleev Table</h1>
+  </header>
   <main>
     <div class="main-container">
       <div class="column1">
